--- a/package.json
+++ b/package.json
@@ -102,11 +102,13 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-feather": "1.1.4",
+    "react-redux": "^7.2.2",
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-swipeable": "^5.2.0",
     "redis": "^3.0.2",
+    "redux": "^4.0.5",
     "resize-observer-polyfill": "^1.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
