--- a/package.json
+++ b/package.json
@@ -1,78 +1,27 @@
 {
-  "name": "Groupon_dev",
+  "name": "ShopUp",
   "version": "0.0.0",
   "private": true,
-  "description": "Groupon Exam",
+  "description": "ShopUp Exam",
   "scripts": {
-    "build": "node_modules/grunt-cli/bin/grunt --force",
-    "grunt-watch": "node_modules/grunt-cli/bin/grunt watch",
-    "start": "node ./bin/www",
-    "webpack-dev-build": "webpack --mode=development --env.ASSET_PATH='/dev-assets/'",
-    "webpack-prod-build": "webpack --mode=production --env.ASSET_PATH='/static/'",
-    "webpack-watch": "yarn run build && yarn run webpack-dev-build --watch --progress"
+    "start": "node ./bin/www"
   },
   "repository": "https://bitbucket.org/openwings/newsroom/src/Hacker_Earth/",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.0",
-    "@babel/preset-env": "^7.6.2",
-    "amdi18n-loader": "^0.9.3",
-    "autoprefixer": "^8.6.0",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "exports-loader": "^0.7.0",
-    "expose-loader": "^0.7.5",
-    "grunt": "^1.1.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-requirejs": "^1.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-dust": "^0.9.4",
-    "grunt-plato": "^1.4.0",
-    "grunt-postcss": "^0.9.0",
-    "grunt-sass": "^2.1.0",
-    "grunt-styledown": "0.0.3",
-    "imports-loader": "^0.8.0",
-    "load-grunt-tasks": "^5.1.0",
-    "npm": "^6.14.5",
-    "raw-loader": "^3.1.0",
-    "requirejs": "^2.3.5",
-    "svgo": "^1.1.1",
-    "terser-webpack-plugin": "^2.1.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.0",
-    "webpack-bundle-analyzer": "^3.5.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-manifest-plugin": "^2.2.0"
+    "npm": "^6.14.5"
   },
   "dependencies": {
-    "@babel/plugin-transform-shorthand-properties": "^7.7.4",
-    "@babel/preset-react": "^7.9.4",
-    "@popperjs/core": "^2.4.0",
-    "animejs": "^3.2.0",
     "axios": "^0.19.2",
-    "backbone": "^1.4.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.3",
-    "classnames": "2.2.6",
-    "clsx": "^1.0.4",
     "cluster": "^0.7.7",
     "compression": "^1.7.4",
-    "compression-webpack-plugin": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
-    "css-loader": "^3.5.3",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "dustjs-helpers": "^1.7.4",
-    "dustjs-linkedin": "^2.7.5",
-    "elasticsearch": "^16.7.1",
     "express": "~4.16.1",
     "express-dustjs": "^1.1.1",
     "express-errorlog": "^1.1.0",
@@ -81,51 +30,16 @@
     "font-awesome": "^4.7.0",
     "foundation-sites": "^5.5.3",
     "global": "^4.4.0",
-    "grunt-babel": "^8.0.0",
     "gzip-loader": "^0.0.1",
     "helmet": "^3.22.0",
     "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.2.0",
     "http-errors": "^1.7.3",
     "inspectpack": "^4.4.0",
-    "jquery": "^3.5.0",
-    "jquery-ui": "^1.12.1",
-    "jquery-ui-dist": "^1.12.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "modernizr-webpack-plugin": "^1.0.7",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
-    "node-sass": "^4.14.0",
-    "postcss-loader": "^3.0.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
-    "react-feather": "1.1.4",
-    "react-redux": "^7.2.2",
-    "react-responsive-modal": "^4.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-swipeable": "^5.2.0",
     "redis": "^3.0.2",
-    "redux": "^4.0.5",
-    "resize-observer-polyfill": "^1.5.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "scriptjs": "^2.5.9",
-    "select2": "^4.0.13",
-    "spectrum-colorpicker": "^1.8.0",
-    "speed-measure-webpack-plugin": "^1.3.1",
-    "style-loader": "^1.2.1",
-    "styled-components": "4.0.2 - latest",
-    "sweetalert": "^2.1.2",
-    "underscore": "^1.10.2",
     "uniqid": "^5.2.0",
-    "url-loader": "^3.0.0",
-    "web-vitals": "^0.2.4",
-    "webpack-assets-manifest": "^3.1.1",
-    "webpack-md5-hash": "^0.0.6",
-    "webpack-node-externals": "^1.7.2",
     "winston": "^3.2.1",
     "yarn": "^1.21.0"
   }
